<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:sl="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/theme_daren"
    tools:context="com.huami.merchant.fragment.TaskFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/task_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/cicle_back"
            android:text="@string/default_search"
            android:lines="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@mipmap/search_icon"
            android:textColor="@color/font_bottom"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingRight="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="待审核:" />
        <TextView
            android:id="@+id/wait_preview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="10单" />
        <TextView
            android:id="@+id/only_look_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_back"
            android:padding="5dp"
            android:text="只看待审核" />

        <TextView
            android:id="@+id/help_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="协助审核"
            android:padding="10dp"
            android:visibility="gone"
            android:textColor="@color/color_blue" />
    </LinearLayout>
    <com.huami.merchant.designView.stateView.StateLayoutView
        android:id="@+id/state_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        sl:emptyImg="@mipmap/no_start_task"
        sl:emptyText="@string/empty_tip"
        sl:errorImg="@mipmap/ic_state_error"
        sl:errorText="@string/error_tip"
        sl:loadingText="@string/loading_tip"
        sl:noNetworkImg="@mipmap/ic_state_no_network"
        sl:noNetworkText="@string/no_network_tip"
        sl:timeOutImg="@mipmap/ic_state_time_out"
        sl:timeOutText="@string/time_out_tip">
        <com.tuesda.walker.circlerefresh.CircleRefreshLayout
            android:id="@+id/circle_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/task_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/theme_daren">
            </android.support.v7.widget.RecyclerView>
        </com.tuesda.walker.circlerefresh.CircleRefreshLayout>
    </com.huami.merchant.designView.stateView.StateLayoutView>
</LinearLayout>
