<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/theme_daren">

    <include layout="@layout/include_login_bar"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/login_edt_user"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:hint="@string/user_hint"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/del_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/login_edt_user"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/login_edt_user"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@mipmap/cp_ic_search_clear" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/theme_daren" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/login_edt_pswd"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="80dp"
            android:background="@null"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:hint="@string/pswd_hint"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textSize="14sp"
            android:clickable="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginRight="14dp"
            android:textColor="@color/red"
            android:layout_alignBaseline="@+id/login_edt_pswd"
            android:layout_alignBottom="@+id/login_edt_pswd"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_back_theme"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white" />
</LinearLayout>